@@ -17,15 +17,17 @@
 package com.echothree.control.user.offer.server.command;
 
 import com.echothree.control.user.offer.common.form.GetOfferNameElementForm;
+import com.echothree.control.user.offer.common.result.GetOfferNameElementResult;
 import com.echothree.control.user.offer.common.result.OfferResultFactory;
+import com.echothree.model.control.core.common.EventTypes;
 import com.echothree.model.control.offer.server.control.OfferNameElementControl;
+import com.echothree.model.control.offer.server.logic.OfferNameElementLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.offer.server.entity.OfferNameElement;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSingleEntityCommand;
@@ -33,6 +35,8 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class GetOfferNameElementCommand
@@ -42,16 +46,20 @@ public class GetOfferNameElementCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
                         new SecurityRoleDefinition(SecurityRoleGroups.OfferNameElement.name(), SecurityRoles.Review.name())
-                ))
-        ));
+                        )))
+                )));
         
-        FORM_FIELD_DEFINITIONS = List.of(
-                new FieldDefinition("OfferNameElementName", FieldType.ENTITY_NAME, true, null, null)
-        );
+        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                new FieldDefinition("OfferNameElementName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+                ));
     }
     
     /** Creates a new instance of GetOfferNameElementCommand */
@@ -61,26 +69,24 @@ public class GetOfferNameElementCommand
     
     @Override
     protected OfferNameElement getEntity() {
-        var offerNameElementControl = (OfferNameElementControl)Session.getModelController(OfferNameElementControl.class);
-        var offerNameElementName = form.getOfferNameElementName();
-        var offerNameElement = offerNameElementControl.getOfferNameElementByName(offerNameElementName);
-        
-        if(offerNameElement == null) {
-            addExecutionError(ExecutionErrors.UnknownOfferNameElementName.name(), offerNameElementName);
+        OfferNameElement offerNameElement = OfferNameElementLogic.getInstance().getOfferNameElementByUniversalSpec(this, form);
+
+        if(offerNameElement != null) {
+            sendEventUsingNames(offerNameElement.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
         }
-        
+
         return offerNameElement;
     }
     
     @Override
     protected BaseResult getTransfer(OfferNameElement offerNameElement) {
         var offerNameElementControl = (OfferNameElementControl)Session.getModelController(OfferNameElementControl.class);
-        var result = OfferResultFactory.getGetOfferNameElementResult();
-        
+        GetOfferNameElementResult result = OfferResultFactory.getGetOfferNameElementResult();
+
         if(offerNameElement != null) {
             result.setOfferNameElement(offerNameElementControl.getOfferNameElementTransfer(getUserVisit(), offerNameElement));
         }
-        
+
         return result;
     }
     
